Added icon to Exercise 11

--- a/my-site/index.html
+++ b/my-site/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My site</title>
+    <link rel="shortcut icon" href="img/coding_computer_pc_screen_code_icon_193925.ico" type="image/x-icon">
+  
 </head>
 <body>
     <h1>My site</h1>
-
-    <h2>About me</h2>
+  
     <p>Hello and welcome to my site.</p></br>
         
 <p>My name is Yulia. Feel free to find more about me <a href="about.html"> here </a></p>
